--- a/index-scroll.html
+++ b/index-scroll.html
@@ -114,6 +114,17 @@
       <a href="src/map/partnermap.html" class="card">🗺️ 파트너 지도</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📡 실시간 분석 · 추천 · 글로벌 자동 콘텐츠</h2>
+    <div class="scroll-container">
+      <a href="src/admin/stats.html" class="card">📊 기능 통계</a>
+      <a href="src/media/scriptgen.html" class="card">🎞️ 영상 대본 생성</a>
+      <a href="src/ai/recommend.html" class="card">🤖 기능 추천</a>
+      <a href="src/dev/api.html" class="card">🔌 API 연동</a>
+      <a href="src/brand/translate.html" class="card">🌐 홍보 번역기</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
