--- a/index-scroll.html
+++ b/index-scroll.html
@@ -35,6 +35,17 @@
       <a href="src/pwa/install.html" class="card">📱 앱 설치</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">👤 개인화 · 공유 · 인증 · 전문가 연결</h2>
+    <div class="scroll-container">
+      <a href="src/user/home.html" class="card">🧑‍🌾 내 홈 대시보드</a>
+      <a href="src/user/cardstyle.html" class="card">🎨 카드 스타일</a>
+      <a href="src/media/sharegen.html" class="card">📢 공유 콘텐츠</a>
+      <a href="src/tools/verifygen.html" class="card">📄 인증 요청</a>
+      <a href="src/community/experts.html" class="card">👨‍💼 전문가 연결</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
