--- a/index-scroll.html
+++ b/index-scroll.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head><meta charset="UTF-8">
-<title>AgriNexus 사용자 생태계</title>
+<html lang="ko"><head><meta charset="UTF-8">
+<title>AgriNexus 전문가 시스템</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
@@ -22,28 +21,16 @@
   flex-shrink: 0;
 }
 </style>
-</head>
-<body class="bg-gray-900 text-white">
+</head><body class="bg-gray-900 text-white">
 <main class="max-w-6xl mx-auto px-6 py-10">
-  <h1 class="text-3xl font-bold text-center mb-6">🧩 사용자 운영 기능</h1>
+  <h1 class="text-3xl font-bold text-center mb-6">🧠 전문가 시스템 + IoT + 전략 분석</h1>
   <section class="mb-16">
     <div class="scroll-container">
-      <a href="src/user/login.html" class="card">🔐 로그인</a>
-      <a href="src/tools/templates.html" class="card">📝 문서 생성</a>
-      <a href="src/user/chat.html" class="card">💬 채팅</a>
-      <a href="src/user/usage.html" class="card">📊 리포트</a>
-      <a href="src/pwa/install.html" class="card">📱 앱 설치</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">👤 개인화 · 공유 · 인증 · 전문가 연결</h2>
-    <div class="scroll-container">
-      <a href="src/user/home.html" class="card">🧑‍🌾 내 홈 대시보드</a>
-      <a href="src/user/cardstyle.html" class="card">🎨 카드 스타일</a>
-      <a href="src/media/sharegen.html" class="card">📢 공유 콘텐츠</a>
-      <a href="src/tools/verifygen.html" class="card">📄 인증 요청</a>
-      <a href="src/community/experts.html" class="card">👨‍💼 전문가 연결</a>
+      <a href="src/ai/autopilot.html" class="card">🧠 자율 운영</a>
+      <a href="src/admin/trends.html" class="card">📈 트렌드 분석</a>
+      <a href="src/iot/sensors.html" class="card">🌡️ IoT 센서</a>
+      <a href="src/system/feedbackloop.html" class="card">🔁 피드백 루프</a>
+      <a href="src/ai/strategy.html" class="card">🧾 전략 리포트</a>
     </div>
   </section>
 </main>
