--- a/index-scroll.html
+++ b/index-scroll.html
@@ -33,6 +33,17 @@
       <a href="src/ai/strategy.html" class="card">🧾 전략 리포트</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🛡️ 보안 · 백업 · 대응 시스템</h2>
+    <div class="scroll-container">
+      <a href="src/system/security.html" class="card">🔐 보안 설정</a>
+      <a href="src/tools/kb.html" class="card">📚 지식 베이스</a>
+      <a href="src/tools/backup.html" class="card">📦 기능 백업</a>
+      <a href="src/system/emergency.html" class="card">🚨 긴급 대응</a>
+      <a href="src/user/permissions.html" class="card">🧩 권한 매트릭스</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
