--- a/index-scroll.html
+++ b/index-scroll.html
@@ -44,6 +44,18 @@
       <a href="src/user/permissions.html" class="card">🧩 권한 매트릭스</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">👑 Founder 브랜드 전략 기능</h2>
+    <div class="scroll-container">
+      <a href="src/founder/signature.html" class="card">👑 Signature 고정</a>
+      <a href="src/founder/interviewgpt.html" class="card">🧠 GPT 인터뷰</a>
+      <a href="src/founder/gptengine.html" class="card">🤖 FounderGPT</a>
+      <a href="src/founder/irbrief.html" class="card">📜 IR/언론 문구</a>
+      <a href="src/founder/profilelink.html" class="card">🌍 메일/도메인 연결</a>
+      <a href="src/founder/cardsection.html" class="card">🧩 Founder 고정 섹션</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
