--- a/landing.html
+++ b/landing.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Welcome to AgriNexus 🌍</title>
+<html lang="ko"><head>
+  <meta charset="UTF-8"><title>AgriNexus World - 런칭 페이지</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Try AgriNexus smart farm simulator, export automation, logistics AI.">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-black text-white text-center p-10">
-  <h1 class="text-4xl font-bold mb-6">🌍 Welcome to AgriNexus World</h1>
-  <p class="mb-4 text-gray-400">AI Smart Farming · Global Logistics · Real-time Automation</p>
-  <a href="index.html" class="bg-green-500 px-6 py-3 rounded text-lg text-white">Explore the Platform →</a>
-  <p class="mt-6 text-sm text-gray-600">Join over 10,000 users optimizing agriculture & trade in real-time.</p>
+<body class="bg-gray-900 text-white text-center py-20">
+  <h1 class="text-5xl font-bold mb-6">🌍 AgriNexus World</h1>
+  <p class="text-lg text-gray-300 mb-8">세계 최초의 AI 스마트팜 + 물류 + 계약 자동화 플랫폼</p>
+  <a href="index-scroll.html" class="bg-green-500 text-white px-6 py-3 rounded text-lg">기능 체험 시작하기 →</a>
 </body>
 </html>
