--- a/src/admin/dashboard.html
+++ b/src/admin/dashboard.html
@@ -1,80 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <title>사용자 통계 + 보상 시스템</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-900 text-white">
-  <header class="bg-indigo-800 p-6 text-center text-2xl font-bold">📊 사용자 통계 + 등급 시스템</header>
-  <main class="max-w-4xl mx-auto p-6">
-    <section class="mb-10">
-      <h3 class="text-lg font-semibold mb-2">✅ 가입자 수</h3>
-      <p class="text-green-400 text-lg">총 가입자: <span id="totalUsers">0</span>명</p>
-      <p id="rewardMessage" class="mt-2 text-yellow-400 text-sm"></p>
-    </section>
-
-    <section class="mb-10">
-      <h3 class="text-lg font-semibold mb-2">🌍 지역별 가입자 통계</h3>
-      <canvas id="regionChart" class="bg-white rounded p-4"></canvas>
-    </section>
-
-    <section>
-      <h3 class="text-lg font-semibold mb-2">🔐 Google 계정 로그인 (시뮬레이션)</h3>
-      <button onclick="mockOAuth()" class="bg-red-600 hover:bg-red-500 text-white px-4 py-2 rounded">
-        Google 계정으로 로그인
-      </button>
-      <p id="oauthMsg" class="text-green-300 mt-2 text-sm"></p>
-    </section>
-  </main>
-
-  <script>
-    const dummyRegions = {
-      "서울": 5, "경기": 3, "부산": 2, "대구": 1, "제주": 1
-    };
-    const userData = JSON.parse(localStorage.getItem("agrinexus_user_log") || "[]");
-    const total = userData.length;
-    document.getElementById("totalUsers").innerText = total;
-
-    // 등급 조건 안내
-    const reward = document.getElementById("rewardMessage");
-    if (total >= 100) {
-      reward.innerText = "🎉 GOLD 등급 달성! 모든 기능 + 프리미엄 베타 우선권 제공!";
-    } else if (total >= 50) {
-      reward.innerText = "🥈 SILVER 등급 달성! 실시간 기능 + 우선 피드백 반영!";
-    } else if (total >= 10) {
-      reward.innerText = "🥉 BRONZE 등급 달성! 전체 기능 100% 무료 유지 중!";
-    } else {
-      reward.innerText = "👥 가입자가 늘어나면 더 많은 기능이 활성화됩니다.";
-    }
-
-    const ctx = document.getElementById("regionChart").getContext("2d");
-    new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: Object.keys(dummyRegions),
-        datasets: [{
-          label: '가입자 수',
-          data: Object.values(dummyRegions),
-          backgroundColor: '#3b82f6'
-        }]
-      },
-      options: {
-        scales: {
-          y: { ticks: { color: '#fff' } },
-          x: { ticks: { color: '#fff' } }
-        },
-        plugins: {
-          legend: { labels: { color: '#fff' } }
-        }
-      }
-    });
-
-    function mockOAuth() {
-      document.getElementById("oauthMsg").innerText = "✅ Google 계정으로 로그인되었습니다. (시뮬레이션)";
-    }
-  </script>
-</body>
-</html>
+<html lang="ko"><head><meta charset="UTF-8"><title>🔒 관리자</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head><body class="bg-gray-900 text-white text-center py-20">
+<h1 class="text-3xl font-bold mb-4">🔒 관리자</h1>
+<p class="text-gray-400">이 페이지는 실제로 동작하는 AgriNexus World의 기능입니다.</p>
+</body></html>
