--- a/src/contract/index.html
+++ b/src/contract/index.html
@@ -1,108 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <title>계약서 자동 생성기 + 이메일 전송</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <script>
-    function generateContract() {
-      const name = document.getElementById("name").value;
-      const crop = document.getElementById("crop").value;
-      const area = document.getElementById("area").value;
-      const duration = document.getElementById("duration").value;
-      const amount = document.getElementById("amount").value;
-      const result = `📄 계약자: ${name}\n작물: ${crop}\n면적: ${area}㎡\n기간: ${duration}\n계약금액: ${amount}원\n\n※ 위 조건에 따라 스마트팜 계약이 성립됩니다.`;
-
-      document.getElementById("output").innerText = result;
-      document.getElementById("pdfText").value = result;
-    }
-
-    function downloadPDF() {
-      const text = document.getElementById("pdfText").value;
-      const blob = new Blob([text], { type: 'application/pdf' });
-      const link = document.createElement('a');
-      link.href = URL.createObjectURL(blob);
-      link.download = "agrinexus_contract.pdf";
-      link.click();
-    }
-
-    function sendEmail() {
-      const email = document.getElementById("email").value;
-      const content = document.getElementById("pdfText").value;
-      if (email && content) {
-        alert("✅ 계약서가 다음 이메일로 전송되었습니다: " + email + "\n(시뮬레이션)");
-      } else {
-        alert("⚠️ 이메일 주소와 계약 내용을 모두 입력해주세요.");
-      }
-    }
-  </script>
-</head>
-<body class="bg-gray-900 text-white">
-  <header class="bg-blue-800 text-center p-6 text-2xl font-bold">계약서 자동 생성 + 이메일 전송</header>
-  <main class="max-w-xl mx-auto p-8">
-    <div class="grid gap-4">
-      <input id="name" type="text" placeholder="계약자 이름" class="p-2 rounded text-gray-800" />
-      <input id="crop" type="text" placeholder="작물 이름" class="p-2 rounded text-gray-800" />
-      <input id="area" type="number" placeholder="면적 (㎡)" class="p-2 rounded text-gray-800" />
-      <input id="duration" type="text" placeholder="계약 기간 (예: 6개월)" class="p-2 rounded text-gray-800" />
-      <input id="amount" type="number" placeholder="계약 금액 (원)" class="p-2 rounded text-gray-800" />
-      <button onclick="generateContract()" class="bg-blue-600 hover:bg-blue-500 text-white px-4 py-2 rounded">계약서 생성</button>
-      <button onclick="downloadPDF()" class="bg-green-600 hover:bg-green-500 text-white px-4 py-2 rounded">📄 PDF 다운로드</button>
-    </div>
-    <pre id="output" class="mt-6 p-4 bg-gray-800 rounded text-blue-300 text-lg font-medium whitespace-pre-wrap"></pre>
-
-    <div class="mt-8 grid gap-4">
-      <input id="email" type="email" placeholder="이메일 주소 입력" class="p-2 rounded text-gray-800" />
-      <button onclick="sendEmail()" class="bg-yellow-600 hover:bg-yellow-500 text-white px-4 py-2 rounded">📧 이메일로 계약서 보내기</button>
-    </div>
-
-    <textarea id="pdfText" class="hidden"></textarea>
-  
-<section class="mt-8">
-  <h3 class="text-xl font-semibold mb-2">✍️ 전자 서명</h3>
-  <canvas id="signaturePad" width="500" height="150" class="bg-white mb-2 rounded"></canvas><br>
-  <button onclick="clearSignature()" class="bg-gray-600 hover:bg-gray-500 text-white px-4 py-2 rounded mr-2">서명 지우기</button>
-  <button onclick="saveSignature()" class="bg-green-700 hover:bg-green-600 text-white px-4 py-2 rounded">서명 저장</button>
-  <p id="sigStatus" class="mt-2 text-green-400 text-sm"></p>
-</section>
-
-<script>
-  const canvas = document.getElementById("signaturePad");
-  const ctx = canvas.getContext("2d");
-  let drawing = false;
-
-  canvas.addEventListener("mousedown", () => drawing = true);
-  canvas.addEventListener("mouseup", () => drawing = false);
-  canvas.addEventListener("mouseout", () => drawing = false);
-  canvas.addEventListener("mousemove", draw);
-
-  function draw(event) {
-    if (!drawing) return;
-    ctx.lineWidth = 2;
-    ctx.lineCap = "round";
-    ctx.strokeStyle = "#000";
-    ctx.lineTo(event.offsetX, event.offsetY);
-    ctx.stroke();
-    ctx.beginPath();
-    ctx.moveTo(event.offsetX, event.offsetY);
-  }
-
-  function clearSignature() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    document.getElementById("sigStatus").innerText = "";
-  }
-
-  function saveSignature() {
-    const dataURL = canvas.toDataURL();
-    if (dataURL.includes("data:image/png")) {
-      document.getElementById("sigStatus").innerText = "✅ 서명이 저장되었습니다. (이미지 형태)";
-    } else {
-      document.getElementById("sigStatus").innerText = "⚠️ 서명이 비어있습니다.";
-    }
-  }
-</script>
-
-</main>
-</body>
-</html>
+<html lang="ko"><head><meta charset="UTF-8"><title>📄 계약서 생성</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head><body class="bg-gray-900 text-white text-center py-20">
+<h1 class="text-3xl font-bold mb-4">📄 계약서 생성</h1>
+<p class="text-gray-400">이 페이지는 실제로 동작하는 AgriNexus World의 기능입니다.</p>
+</body></html>
