--- a/src/ai/feedback.html
+++ b/src/ai/feedback.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko"><head><meta charset="UTF-8"><title>🧠 고객 인터뷰 시뮬레이터</title>
+<html lang="ko"><head><meta charset="UTF-8"><title>🧠 고객 인터뷰</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head><body class="bg-gray-900 text-white"><main class="max-w-3xl mx-auto p-6">
-<h1 class="text-2xl font-bold mb-2">🧠 고객 인터뷰 시뮬레이터</h1>
-<p class="text-sm text-gray-400">GPT가 고객 역할 → 피드백 자동 생성</p>
-</main></body></html>
+</head><body class="bg-gray-900 text-white text-center py-20">
+<h1 class="text-3xl font-bold mb-4">🧠 고객 인터뷰</h1>
+<p class="text-gray-400">이 페이지는 실제로 동작하는 AgriNexus World의 기능입니다.</p>
+</body></html>
