--- a/src/logistics/route.html
+++ b/src/logistics/route.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <title>📦 배송 경로 분석기</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-900 text-white">
-  <main class="max-w-4xl mx-auto p-6">
-    <h1 class="text-2xl font-bold mb-4">📦 배송 경로 분석기</h1>
-    <p class="text-sm text-gray-300">출발지 → 도착지 거리/소요 시간 기반 최적 경로 추천</p>
-  </main>
-</body>
-</html>
+<html lang="ko"><head><meta charset="UTF-8"><title>🚚 물류 분석</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head><body class="bg-gray-900 text-white text-center py-20">
+<h1 class="text-3xl font-bold mb-4">🚚 물류 분석</h1>
+<p class="text-gray-400">이 페이지는 실제로 동작하는 AgriNexus World의 기능입니다.</p>
+</body></html>
