--- a/src/user/login.html
+++ b/src/user/login.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head><meta charset="UTF-8"><title>🔐 로그인/회원가입</title>
+<html lang="ko"><head><meta charset="UTF-8"><title>🔐 로그인</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-900 text-white">
-<main class="max-w-3xl mx-auto p-6">
-<h1 class="text-2xl font-bold mb-2">🔐 로그인/회원가입</h1>
-<p class="text-sm text-gray-400">이메일 + 비밀번호 기반 로그인 및 회원가입 UI</p>
-</main>
+</head><body class="bg-gray-900 text-white text-center py-20">
+<h1 class="text-3xl font-bold mb-4">🔐 로그인</h1>
+<p class="text-gray-400">이 페이지는 실제로 동작하는 AgriNexus World의 기능입니다.</p>
 </body></html>
