--- a/index-scroll.html
+++ b/index-scroll.html
@@ -56,6 +56,16 @@
       <a href="src/founder/cardsection.html" class="card">🧩 Founder 고정 섹션</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">♾️ 전자동화 · 글로벌 학습 · 생존형 구조</h2>
+    <div class="scroll-container">
+      <a href="src/system/globalsearch.html" class="card">🛰️ 글로벌 수집</a>
+      <a href="src/system/autoupgrade.html" class="card">🔁 자동 업그레이드</a>
+      <a href="src/ai/selflearning.html" class="card">🤖 자가 학습</a>
+      <a href="src/system/livemap.html" class="card">🌐 살아있는 지도</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
