--- a/src/ai/autopilot.html
+++ b/src/ai/autopilot.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko"><head><meta charset="UTF-8"><title>🧠 자율 운영</title>
+<html lang="ko">
+<head><meta charset="UTF-8"><title>🧠 자율 스마트팜 운영기</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head><body class="bg-gray-900 text-white text-center py-20">
-<h1 class="text-3xl font-bold mb-4">🧠 자율 운영</h1>
-<p class="text-gray-400">이 페이지는 실제로 동작하는 AgriNexus World의 기능입니다.</p>
-</body></html>
+</head>
+<body class="bg-gray-900 text-white">
+<main class="max-w-3xl mx-auto p-6">
+<h1 class="text-2xl font-bold mb-2">🧠 자율 스마트팜 운영기</h1>
+<p class="text-sm text-gray-400">AI가 자동으로 기능 흐름 최적화 운영</p>
+</main>
+</body>
+</html>
