--- a/src/smartfarm/plan.html
+++ b/src/smartfarm/plan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko"><head><meta charset="UTF-8"><title>🌱 스마트팜 설계</title>
+<html lang="ko"><head><meta charset="UTF-8"><title>🌱 스마트팜 설계설치 + 환경 분석</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head><body class="bg-gray-900 text-white text-center py-20">
-<h1 class="text-3xl font-bold mb-4">🌱 스마트팜 설계</h1>
-<p class="text-gray-400">이 페이지는 실제로 동작하는 AgriNexus World의 기능입니다.</p>
+<h1 class="text-3xl font-bold mb-6">🌱 스마트팜 설계설치 + 환경 분석</h1>
+<p class="text-gray-400">이 기능은 AgriNexus World에서 실사용 가능한 기능입니다.</p>
 </body></html>
