--- a/src/system/emergency.html
+++ b/src/system/emergency.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko"><head><meta charset="UTF-8"><title>🚨 긴급 대응 센터</title>
+<html lang="ko"><head><meta charset="UTF-8"><title>🚨 긴급 대응</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head><body class="bg-gray-900 text-white"><main class="max-w-3xl mx-auto p-6">
-<h1 class="text-2xl font-bold mb-2">🚨 긴급 대응 센터</h1>
-<p class="text-sm text-gray-400">장애 발생 시 자동 안내 및 대응 흐름</p>
-</main></body></html>
+</head><body class="bg-gray-900 text-white text-center py-20">
+<h1 class="text-3xl font-bold mb-6">🚨 긴급 대응</h1>
+<p class="text-gray-400">이 기능은 AgriNexus World에서 실사용 가능한 기능입니다.</p>
+</body></html>
