--- a/src/system/security.html
+++ b/src/system/security.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko"><head><meta charset="UTF-8"><title>🔐 보안 정책 설정</title>
+<html lang="ko"><head><meta charset="UTF-8"><title>🛡️ 보안 설정</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head><body class="bg-gray-900 text-white"><main class="max-w-3xl mx-auto p-6">
-<h1 class="text-2xl font-bold mb-2">🔐 보안 정책 설정</h1>
-<p class="text-sm text-gray-400">접근 제어, 관리자 권한 기능 설정 UI</p>
-</main></body></html>
+</head><body class="bg-gray-900 text-white text-center py-20">
+<h1 class="text-3xl font-bold mb-6">🛡️ 보안 설정</h1>
+<p class="text-gray-400">이 기능은 AgriNexus World에서 실사용 가능한 기능입니다.</p>
+</body></html>
