--- a/src/tools/templates.html
+++ b/src/tools/templates.html
@@ -2,6 +2,6 @@
 <html lang="ko"><head><meta charset="UTF-8"><title>📝 문서 템플릿</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head><body class="bg-gray-900 text-white text-center py-20">
-<h1 class="text-3xl font-bold mb-4">📝 문서 템플릿</h1>
-<p class="text-gray-400">이 페이지는 실제로 동작하는 AgriNexus World의 기능입니다.</p>
+<h1 class="text-3xl font-bold mb-6">📝 문서 템플릿</h1>
+<p class="text-gray-400">이 기능은 AgriNexus World에서 실사용 가능한 기능입니다.</p>
 </body></html>
