--- a/index.html
+++ b/index.html
@@ -1,38 +1,24 @@
 <!DOCTYPE html>
-<html lang="ko"><head>
-<meta charset="UTF-8">
-<title>AgriNexus World — 기능 대시보드</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-<style>
-.card {
-  background: #1e293b;
-  color: white;
-  padding: 1.25rem;
-  border-radius: 0.75rem;
-  text-align: center;
-  transition: transform 0.2s ease-in-out;
-}
-.card:hover {
-  background: #10b981;
-  color: black;
-  transform: scale(1.05);
-}
-</style>
-</head>
-<body class="bg-slate-900 text-white">
+<html lang="ko"><head><meta charset="UTF-8">
+<title>AgriNexus World</title><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"></head>
+<body class="bg-white text-gray-900">
+<header class="bg-slate-800 text-white py-6">
+  <div class="max-w-6xl mx-auto px-6 flex justify-between items-center">
+    <h1 class="text-2xl font-bold">🌍 AgriNexus World</h1>
+    <span class="text-sm">Powered by Founder & Vision Architect</span>
+  </div>
+</header>
 <main class="max-w-6xl mx-auto px-6 py-12">
-<h1 class="text-4xl font-bold mb-10 text-center">🌍 AgriNexus World</h1>
-<p class="text-center mb-10 text-gray-400">세계 최초 스마트팜 + 계약 + 물류 + 분석 + AI 플랫폼</p>
-<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-  <a class="card" href="functions/smartfarm-plan.html">🌱 스마트팜 설계</a>
-  <a class="card" href="functions/contract-generate.html">📄 계약서 생성</a>
-  <a class="card" href="functions/logistics-route.html">🚚 물류 분석</a>
-  <a class="card" href="functions/report-profit.html">📈 수익 리포트</a>
-  <a class="card" href="functions/ai-gpt.html">🤖 GPT 분석</a>
-  <a class="card" href="functions/system-dashboard.html">📊 관리자 대시보드</a>
-  <a class="card" href="functions/user-login.html">🔐 사용자 로그인</a>
-</div>
+  <h2 class="text-3xl font-bold mb-6">기능 대시보드</h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+    <a href="functions/smartfarm.html" class="border rounded-lg p-6 hover:bg-emerald-100">🌱 스마트팜 설계</a>
+    <a href="functions/contract.html" class="border rounded-lg p-6 hover:bg-emerald-100">📄 계약서 자동화</a>
+    <a href="functions/logistics.html" class="border rounded-lg p-6 hover:bg-emerald-100">🚚 물류 분석</a>
+    <a href="functions/report.html" class="border rounded-lg p-6 hover:bg-emerald-100">📈 수익 보고서</a>
+    <a href="functions/ai.html" class="border rounded-lg p-6 hover:bg-emerald-100">🤖 GPT 분석</a>
+    <a href="functions/dashboard.html" class="border rounded-lg p-6 hover:bg-emerald-100">📊 관리자</a>
+    <a href="functions/login.html" class="border rounded-lg p-6 hover:bg-emerald-100">🔐 로그인</a>
+  </div>
 </main>
-</body>
-</html>
+</body></html>
