--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@
     <a href="functions/dashboard.html" class="border rounded-lg p-6 hover:bg-emerald-100">📊 관리자</a>
     <a href="functions/login.html" class="border rounded-lg p-6 hover:bg-emerald-100">🔐 로그인</a>
   </div>
+
+<section class="mb-12">
+  <h2 class="text-2xl font-bold mb-6 text-emerald-500 border-b border-gray-600">🌱 스마트팜 시스템</h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+    <a href="functions/smartfarm-overview.html" class="border rounded-lg p-6 hover:bg-emerald-100">🌱 스마트팜 개요</a>
+    <a href="functions/smartfarm-design.html" class="border rounded-lg p-6 hover:bg-emerald-100">🛠️ 설계 도구</a>
+    <a href="functions/smartfarm-simulation.html" class="border rounded-lg p-6 hover:bg-emerald-100">📊 재배 시뮬레이션</a>
+    <a href="functions/smartfarm-control.html" class="border rounded-lg p-6 hover:bg-emerald-100">🎛️ 센서 제어</a>
+    <a href="functions/smartfarm-growth.html" class="border rounded-lg p-6 hover:bg-emerald-100">🌾 성장 추적</a>
+    <a href="functions/smartfarm-alerts.html" class="border rounded-lg p-6 hover:bg-emerald-100">🚨 경고 시스템</a>
+    <a href="functions/smartfarm-weather.html" class="border rounded-lg p-6 hover:bg-emerald-100">🌤️ 기후 분석</a>
+    <a href="functions/smartfarm-planexport.html" class="border rounded-lg p-6 hover:bg-emerald-100">🧾 PDF 추출</a>
+  </div>
+</section>
+
 </main>
 </body></html>
