--- a/functions/smartfarm.html
+++ b/functions/smartfarm.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
-<html lang="ko"><head><meta charset="UTF-8"><title>🌱 스마트팜 설계</title>
-<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"></head>
-<body class="bg-slate-900 text-white text-center py-16">
-<h1 class="text-4xl font-bold mb-4">🌱 스마트팜 설계</h1>
-<p class="text-gray-400 text-lg">이 페이지는 실제 운영되는 기능입니다.</p>
-</body></html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <title>🌱 스마트팜 설계</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-slate-900 text-white py-12">
+<main class="max-w-4xl mx-auto px-4">
+  <h1 class="text-3xl font-bold mb-6">🌱 스마트팜 설계</h1>
+  <p class="text-gray-400 mb-8">아래는 스마트팜 설계 관련 세부 기능입니다. 각 항목을 클릭하여 자세히 확인하세요.</p>
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
+<a class="border rounded-lg p-5 hover:bg-emerald-100 text-center text-lg" href="smartfarm-overview.html">🌱 스마트팜 개요</a>
+<a class="border rounded-lg p-5 hover:bg-emerald-100 text-center text-lg" href="smartfarm-design.html">🛠️ 설계 도구</a>
+<a class="border rounded-lg p-5 hover:bg-emerald-100 text-center text-lg" href="smartfarm-simulation.html">📊 재배 시뮬레이션</a>
+<a class="border rounded-lg p-5 hover:bg-emerald-100 text-center text-lg" href="smartfarm-control.html">🎛️ 센서 제어</a>
+<a class="border rounded-lg p-5 hover:bg-emerald-100 text-center text-lg" href="smartfarm-growth.html">🌾 성장 추적</a>
+<a class="border rounded-lg p-5 hover:bg-emerald-100 text-center text-lg" href="smartfarm-alerts.html">🚨 경고 시스템</a>
+<a class="border rounded-lg p-5 hover:bg-emerald-100 text-center text-lg" href="smartfarm-weather.html">🌤️ 기후 분석</a>
+<a class="border rounded-lg p-5 hover:bg-emerald-100 text-center text-lg" href="smartfarm-planexport.html">🧾 PDF 추출</a>
+
+  </div>
+</main>
+</body>
+</html>
